--- a/force-app/main/default/aura/Aura3/Aura3.cmp
+++ b/force-app/main/default/aura/Aura3/Aura3.cmp
@@ -1,31 +1,59 @@
 <aura:component controller="Aura3" implements="force:appHostable,flexipage:availableForAllPageTypes">
     <aura:attribute name="count1" type="Integer" default="0" />
     <aura:attribute name="count2" type="Integer" default="0"/>
+    <aura:attribute name="accountsInSection1" type="List" />
+    <aura:attribute name="accountsInSection2" type="List" />
     <aura:attribute name="contactsInSection1" type="List" />
     <aura:attribute name="contactsInSection2" type="List" />
-
-    <div style="width: 50%; float: left; height: 100vh; max-height: calc(100vh - 40px); overflow-y: auto; background-color: lightblue; padding: 20px; border: 5px solid white;">
-        <h1 style="font-weight:bolder; font-size: larger">Section 1</h1> 
-        <lightning:input type="text" label="Search Account" aura:id="search1" required="true" style="margin-bottom: 10px;"/>
-        <lightning:button label="Search" onclick="{!c.searchAccounts1}" />
-        <p style="font-weight:bolder; font-size: larger">Total Contact: {!v.count1}</p><br/>
-        <ul ondrop="{!c.drop}" ondragover="{!c.dragover}" data-section="section1">
-            <aura:iteration items="{!v.contactsInSection1}" var="contact">
-                <li draggable="true" ondragstart="{!c.dragStart}" data-contactid="{!contact.Id}" style="font-size:larger;">{!contact.Name}</li>
-            </aura:iteration>
-        </ul>
-    </div>
+    <aura:attribute name="selectedAccountId1" type="String" />
+    <aura:attribute name="selectedAccountId2" type="String" />
  
-    <div ondrop="{!c.drop}" ondragover="{!c.dragover}" style="width: 50%; float: left; height: 100vh; max-height: calc(100vh - 40px); overflow-y: auto; background-color: lightblue; padding: 20px; border: 5px solid white;">
-        <h1 style="font-weight:bolder; font-size: larger">Section 2</h1>
-        
-        <lightning:input type="text" label="Search Account" aura:id="search2" required="true" style="margin-bottom: 10px;"/>
-        <lightning:button label="Search" onclick="{!c.searchAccounts2}" />
-        <p style="font-weight: bolder; font-size: larger">Total Contact: {!v.count2}</p><br/>
-        <ul ondrop="{!c.dropSection2}" ondragover="{!c.dragover}" data-section="section2">
-            <aura:iteration items="{!v.contactsInSection2}" var="contact">
-                <li draggable="true" ondragstart="{!c.dragStart}" data-contactid="{!contact.Id}" style="font-size: larger;">{!contact.Name}</li>
-            </aura:iteration>
-        </ul>
-    </div>
+<div style="width: 50%; float: left; height: 100vh; max-height: calc(100vh - 40px); overflow-y: auto; background-color: lightblue; padding: 20px; border: 5px solid white;">
+    <h1 style="font-weight:bolder; font-size: larger">Section 1</h1> 
+    <lightning:input type="text" label="Search Account" aura:id="search1" required="true" style="margin-bottom: 10px;"/>
+    <lightning:button label="Search" onclick="{!c.searchAccounts1}" />
+    <p style="font-weight:bolder; font-size: larger">Accounts: </p><br/>
+ 
+    <ul>
+        <aura:iteration items="{!v.accountsInSection1}" var="account">
+            <li data-accountid="{!account.Id}" style="font-size:larger; cursor: pointer;" onclick="{!c.showContacts1}">{!account.Name}</li>
+        </aura:iteration>
+    </ul> 
+    <p style="font-weight:bolder; font-size: larger">Contacts: </p><br/>
+    <ul ondrop="{!c.drop}" ondragover="{!c.dragover}" data-section="section1">
+        <aura:if isTrue="{!empty(v.contactsInSection1)}"> 
+            <li style="font-size:larger;">No contacts available</li>
+            <aura:set attribute="else"> 
+                <aura:iteration items="{!v.contactsInSection1}" var="contact">
+                    <li draggable="true" ondragstart="{!c.dragStart}" data-contactid="{!contact.Id}" style="font-size:larger;">{!contact.Name}</li>
+                </aura:iteration>
+            </aura:set>
+        </aura:if>
+    </ul>
+</div>
+ 
+<div ondrop="{!c.drop}" ondragover="{!c.dragover}" style="width: 50%; float: left; height: 100vh; max-height: calc(100vh - 40px); overflow-y: auto; background-color: lightblue; padding: 20px; border: 5px solid white;">
+    <h1 style="font-weight:bolder; font-size: larger">Section 2</h1>
+    <lightning:input type="text" label="Search Account" aura:id="search2" required="true" style="margin-bottom: 10px;"/>
+    <lightning:button label="Search" onclick="{!c.searchAccounts2}" />
+    <p style="font-weight:bolder; font-size: larger">Accounts: </p><br/>
+     
+    <ul>
+        <aura:iteration items="{!v.accountsInSection2}" var="account">
+            <li data-accountid="{!account.Id}" style="font-size:larger; cursor: pointer;" onclick="{!c.showContacts2}">{!account.Name}</li>
+        </aura:iteration>
+    </ul> 
+    <p style="font-weight:bolder; font-size: larger">Contacts: </p><br/>
+    <ul ondrop="{!c.drop}" ondragover="{!c.dragover}" data-section="section2">
+        <aura:if isTrue="{!empty(v.contactsInSection2)}"> 
+            <li style="font-size:larger;">No contacts available</li>
+            <aura:set attribute="else"> 
+                <aura:iteration items="{!v.contactsInSection2}" var="contact">
+                    <li draggable="true" ondragstart="{!c.dragStart}" data-contactid="{!contact.Id}" style="font-size: larger;">{!contact.Name}</li>
+                </aura:iteration>
+            </aura:set>
+        </aura:if>
+    </ul>
+</div>
+
 </aura:component>
